@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T16:35:33Z",
-  "count_outdated" : 183,
-  "uniques_outdated" : 82,
-  "count" : 208,
-  "uniques" : 97,
+  "timestamp" : "2022-06-15T02:12:51Z",
+  "count_outdated" : 186,
+  "uniques_outdated" : 84,
+  "count" : 211,
+  "uniques" : 99,
   "clones" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 2,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
