@@ -1,3 +1,10 @@
+2022-06-15T02:12:51Z:
+* notice: last 14d: unq all: 2 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 82 183 / 97 208
+* notice: next accum: outdated-unq outdated-all / unq all: 84 186 / 99 211
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-05-31] / [2022-06-14]
+
 2022-06-14T16:35:33Z:
 * notice: last 14d: unq all: 2 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 82 183 / 98 208
